--- a/backend/style.css
+++ b/backend/style.css
@@ -7,12 +7,16 @@ footer {
 body {
   background: white;
 }
-
+footer{
+  bottom: 0;
+  height: auto;
+}
 @media only screen and (max-width: 992px) {
   header,
   main,
   footer {
     padding-left: 0;
+    background-color: black !important;
   }
 }
 
@@ -39,4 +43,15 @@ body {
   border-radius: 2px;
   color: #fff;
   width: auto;
+}
+.form-title{
+  font-size: 24px;
+}
+.name-page{
+  width: 100%;
+  background-color: #303f9f;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  padding: 15px;
 }
